--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="https://webapi.amap.com/maps?v=1.4.8&key=f6ba1a9d6a8b0f1095b2160a69d07639"></script>
 </html>
